cp/richTextFieldWithTables/v1/custom.css
html,
body,
div,
span {
  margin: 0;
  padding: 0;
  border: 0;
  font-family: "Appian Open Sans", sans-serif;
}
/* #parent-container {
  margin: 0px auto;
}
#quill-container {
  border: 1px solid #ccc;
  overflow-y: auto;
} */
/* #sizeBar {
  display: block;
  width: 100%;
  background-color: silver;
  height: 15px;
  max-height: 15px;
}
#usageMessage {
  position: absolute;
  color: white;
  font-size: 0.7em;
  padding: 0 0 0 2px;
}
#usageBar {
  width: 0%;
  height: 100%;
  padding: 0;
} */
/* .ql-disabled {
  border: 0px !important;
}
.ql-disabled > .ql-editor {
  padding: 0;
}
.ql-snow .ql-picker.ql-header.ql-wider {
  width: 130px;
}
.ql-toolbar.ql-snow .ql-spacer {
  margin-right: 15px;
} */
h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0 !important;
  line-height: 1.2 !important;
  font-weight: 600 !important;
}
h1 {
  font-size: 2.7143rem !important;
  padding: 0 0 12px !important;
}
h2 {
  font-size: 2.1429rem !important;
  padding: 0 0 12px !important;
}
h3 {
  font-size: 1.8571rem !important;
  padding: 0 0 12px !important;
}
h4 {
  font-size: 1.5714rem !important;
  padding: 0 0 12px !important;
  color: #666 !important;
}
h5 {
  font-size: 1.2143rem !important;
  padding: 0 0 6px !important;
  color: #666 !important;
}
h6 {
  font-size: 1rem !important;
  padding: 0 0 6px !important;
  color: #666 !important;
}
/*Set default font size to 14px*/
.note-editable {
  font-size: 14px !important;
}
/*Remove additional spacing between newlines*/
.note-editable p {
  margin-bottom: 0px !important;
}
/*Create spacing between subscripts and superscripts so they don't overlap in lists*/
.note-editable li:has(sup)  {
  margin-top: 8px !important;
}
.note-editable li:has(sub) {
  margin-bottom: 8px !important;
}
.dropdown-item > h3 {
  font-size: 18px !important;
}
.dropdown-item > h4 {
  font-size: 15px !important;
}
.dropdown-item > h5 {
  font-size: 14px !important;
}
.dropdown-item {
  padding: 3px 20px !important;
}

.dropdown-item > p {
  margin-bottom: 10px;
}
.dropdown-menu {
  font-size: 14px !important;
  padding: 5px 0 !important;
}
.note-btn-group .note-btn {
  color: #000;
  background-color: #ffffff;
}
/* Hide the entire image URL input group */
.form-group.note-group-image-url {
  display: none !important;
}
/* .ql-editor p {
  font-size: 1rem !important;
  line-height: 1.4 !important;
}
.ql-editor p > span.ql-size-huge {
  font-size: 2.2857rem !important;
}
.ql-editor p > span.ql-size-large {
  font-size: 1.214rem !important;
}
.ql-editor p > span.ql-size-small {
  font-size: 0.8571rem !important;
} */
table,
td,
th,
tr {
  border: solid #eee !important;
  padding: 8px !important;
  vertical-align: top !important;
}
table {
  width: 100% !important;
  max-width: 100% !important;
  margin-bottom: 20px !important;
}
[tooltip] {
  position: relative;
}
[tooltip]::after {
  display: none;
  content: attr(tooltip);
  position: absolute;
  left: 50%;
  top: 100%;
  margin-top: 2px;
  transform: translateX(-50%) translateY(0%);
  background: rgba(0, 0, 0, 0.8);
  text-align: center;
  color: #fff;
  padding: 4px 4px;
  font-size: 12px;
  white-space: nowrap;
  width: "auto";
  pointer-events: none;
  z-index: 1;
}
[tooltip]:hover::before,
[tooltip]:hover::after {
  display: block;
}
button:focus {
  /* Keyboard focus indication. 
  Updated to improve accessibility for color selection. */
  outline-color: black !important;
  outline-offset: -2px !important;
  outline-width: 0.5px !important;
}

